2021-06-24  Chris Dumez  <cdumez@apple.com>

        Resync shadow-dom WPT tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227331

        Reviewed by Alex Christensen.

        Resync shadow-dom WPT tests from upstream a38612f39e7752c353.

        * web-platform-tests/shadow-dom/*: Updated.

2021-06-24  Chris Dumez  <cdumez@apple.com>

        Resync beacon WPT tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227323

        Reviewed by Alex Christensen.

        Resync beacon WPT tests from upstream a38612f39e7752c353.

        * web-platform-tests/beacon/*: Updated.

2021-06-24 Emilio Cobos Álvarez  <emilio@crisal.io>

        Update some html pseudo-class tests.
        https://bugs.webkit.org/show_bug.cgi?id=225851

        Reviewed by Manuel Rego Casasnovas.

        Generated by ./Tools/Scripts/import-w3c-tests web-platform-tests/html/semantics/selectors -t, plus the relevant expectation update.

        * resources/import-expectations.json:
        * web-platform-tests/html/semantics/selectors/META.yml:
        * web-platform-tests/html/semantics/selectors/pseudo-classes/autofill-expected.txt: Added.
        * web-platform-tests/html/semantics/selectors/pseudo-classes/autofill.html: Added.
        * web-platform-tests/html/semantics/selectors/pseudo-classes/invalid-after-clone-expected.txt: Added.
        * web-platform-tests/html/semantics/selectors/pseudo-classes/invalid-after-clone.html: Added.
        * web-platform-tests/html/semantics/selectors/pseudo-classes/link-expected.txt:
        * web-platform-tests/html/semantics/selectors/pseudo-classes/link.html:
        * web-platform-tests/html/semantics/selectors/pseudo-classes/w3c-import.log:

2021-06-23  Chris Dumez  <cdumez@apple.com>

        Resync url WPT tests from upstream
        https://bugs.webkit.org/show_bug.cgi?id=227321

        Reviewed by Alex Christensen.

        Resync url WPT tests from upstream a38612f39e7752c353.
