@@ -23,6 +23,7 @@ PASS new DOMexception("msg", "SyntaxError")
 PASS new DOMexception("msg", "InvalidModificationError")
 PASS new DOMexception("msg", "NamespaceError")
 PASS new DOMexception("msg", "InvalidAccessError")
+PASS new DOMexception("msg", "TypeMismatchError")
 PASS new DOMexception("msg", "SecurityError")
 PASS new DOMexception("msg", "NetworkError")
 PASS new DOMexception("msg", "AbortError")
@@ -31,4 +32,17 @@ PASS new DOMexception("msg", "QuotaExceededError")
 PASS new DOMexception("msg", "TimeoutError")
 PASS new DOMexception("msg", "InvalidNodeTypeError")
 PASS new DOMexception("msg", "DataCloneError")
+PASS new DOMexception("msg", "DOMStringSizeError")
+PASS new DOMexception("msg", "NoDataAllowedError")
+PASS new DOMexception("msg", "ValidationError")
+PASS new DOMexception("msg", "EncodingError")
+PASS new DOMexception("msg", "NotReadableError")
+PASS new DOMexception("msg", "UnknownError")
+PASS new DOMexception("msg", "ConstraintError")
+PASS new DOMexception("msg", "DataError")
+PASS new DOMexception("msg", "TransactionInactiveError")
+PASS new DOMexception("msg", "ReadOnlyError")
+PASS new DOMexception("msg", "VersionError")
+PASS new DOMexception("msg", "OperationError")
+PASS new DOMexception("msg", "NotAllowedError")
 
