@@ -1,0 +1,3 @@
+
+PASS [LegacyFactoryFunction] can be subclassed and correctly handles NewTarget
+
