@@ -1,5 +1,16 @@
 2021-06-24  Chris Dumez  <cdumez@apple.com>
 
+        Resync WebIDL WPT tests from upstream
+        https://bugs.webkit.org/show_bug.cgi?id=227322
+
+        Reviewed by Alex Christensen.
+
+        Resync WebIDL WPT tests from upstream a38612f39e7752c353.
+
+        * web-platform-tests/WebIDL/*: Updated.
+
+2021-06-24  Chris Dumez  <cdumez@apple.com>
+
         Resync shadow-dom WPT tests from upstream
         https://bugs.webkit.org/show_bug.cgi?id=227331
 
